fix: shrink download icon size for icon view
download icon in icon view looks too big

--- a/frontend/src/css/listing.css
+++ b/frontend/src/css/listing.css
@@ -298,6 +298,19 @@ body.rtl .listing-items {
   flex: 1;
 }
 
+
+.listing-items.icons .image-preview.download-icon {
+    width: 100%;
+    height: 2em;
+}
+
+.listing-items.icons .image-preview.download-icon .material-icons {
+    font-size: 2em;
+    width: 100%;
+    text-align: center;
+}
+
+
 .listing-items.compact .listing-item:first-child {
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
